1.3.85 (Build 2025102700)
- Added image and audio version tracking for terms

1.3.84 (Build 2025102300)
- Improvements to conditional completion for learned words

1.3.82 (Build 2025100500)
- Improvements for new activity chooser (Moodle 5.1)

1.3.81 (Build 2025091000)
- Fixes for activity completion
- Improvements to AI Image generation

1.3.80 (Build 2025080600)
- Fixes to word preview and learn mode pool
- Added AI Image Generation

1.3.79 (Build 2025070401)
- fixed totals on course level reporting

1.3.78 (Build 2025070400)
 - course level reporting
 - track self claimed learns

1.3.77 (Build 2025050500)
- support for lang server in Ningxia
- limited voice options for Ningxia

1.3.76 (Build 2025042100)
- Support for Ningxia region (requires Poodll China subscription)

1.3.75 (Build 2025041800)
- Support for Moodle 5.0 and PHP 8.4
- Added support for custom Cloud Poodll server

1.3.74 (Build 2025040400)
- Added AI image generator. You need to install the Poodll AI placement plugin for this to work. https://github.com/justinhunt/moodle-aiplacement_poodll
- Fixed for failing add_word button on words admin page
- Added is_branded callback so the activity icon is no longer a pink smudge
- Improvements to lang chooser feature

1.3.73 (Build 2025012500)
- added word preview mode

1.3.72 (Build 2024120700)
- added support for Moodle Mobile app
- randomized cards on definitions page
- fixed issue with langchooser in free mode

1.3.71 (Build 2024111203)
- added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
- added a push page to push settings from one WordCards activities to others with same name, or in same course, or site wide.

1.3.70 (Build 2024111200)
- added completion option for all words learned and completion fixes
- added word learned event
- added option to use the model sentence on speechcards instead of the term/word